--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "@tailwindcss/forms": "^0.5.4",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -19,6 +21,10 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.26",
+    "prisma": "^5.0.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "4.5.5"
   }
 }
